@@ -29,8 +29,8 @@ def getCommandlineParser():
 
     # Override values
     g = parser.add_argument_group(title="Override values from filename parser", description="")
-    g.add_argument("--series-name",   action="store",       dest="force_name", help="override the parsed series name with this (applies to all files)")
-    g.add_argument("--series-id",     action="store",       dest="series_id",  help="explicitly set the show id for TVdb to use (applies to all files)")
+    g.add_argument("--series-name",   action="store",       help="override the parsed series name with this (applies to all files)")
+    g.add_argument("--series-id",     action="store",       help="explicitly set the show id for TVdb to use (applies to all files)")
 
     # TODO: this should probably be set only in config file
     parser.add_argument("-d", "--movedestination", action="store", dest="move_files_destination", help="Destination to move files to. Variables: %%(seriesname)s %%(seasonnumber)d %%(episodenumbers)s")
